--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </div>
     <div class="line bg-gray-300 py-px w-full mt-20"></div>
    </main>
-   <footer class="py-20 px-20 grid gap-x-20 gap-y-5 grid-cols-1 grid-rows-3 lg:grid-cols-3 lg:grid-rows-1 md:grid-cols-3 md:grid-rows-1 sm:grid-cols-3 sm:grid-rows-1">
+   <footer class="flex flex-col justify-left gap-4 sm:flex-row sm:justify-between md:flex-row md:justify-between lg:flex-row lg:justify-between py-4">
      <div class="cols-span-1 rows-span-1">
         <div class="heading text-white font-bold text-2xl">Join the community</div>
         <div class="icons mt-4 flex gap-x-2">
